--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            ...
+            <div class="swiper-slide">약속</div>
+            <div class="swiper-slide">목표</div>
           </div>
-          <!-- If we need pagination -->
+          <!-- If 표we need pagination -->
           <div class="swiper-pagination"></div>
 
           <!-- If we need navigation buttons -->
