--- a/yeol.html
+++ b/yeol.html
@@ -9,7 +9,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="#">일단 버티조</a></h1>
+        <h1><a href="./index.html">일단 버티조</a></h1>
       </header>
 
       <main class="contents-wrapper">
