--- a/chang.html
+++ b/chang.html
@@ -7,38 +7,123 @@
     <title>자기소개</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css " />
 
-    <link rel="stylesheet" href="chang.css" />
+    <link rel="stylesheet" href="./css/chang.css" />
 
     <script>
-        let cnt = 1;
+        let cnt = 1;   // 글번호로 할당
+
+        /* 작성 -*/
         function a() {
             let writer = f.writer.value;
             let pwd = f.pwd.value;
-            let content = f.content.value; // 입력양식. id가 아닌 이름으로 접근하고 있음, 변수에 담음.(위 세줄)
-            let el = mkDiv(writer, pwd, content); //(위 내용을 파라메터로 받음) , mkDiv 함수에 다녀온 결과 mkDiv(writer, pwd, content)=newDiv
-            //mkDiv에서 return 된 값 el로 받아옴
-            let list = document.getElementById("list"); //list를 get ElementById로 받아와'
-            list.appendChild(el); //위 list의 자식으로 요소 추가
-            //이 el을 list 의 자식으로 붙임
+            let content = f.content.value;
+            let el = makeDiv(writer, pwd, content); // newDiv를 el에 담음 
+            let list = document.getElementById("list");
+            list.appendChild(el);
+
+            // 글 작성 완료되면 입력폼 초기화
+            f.writer.value = "";
+            f.pwd.value = "";
+            f.content.value = "";
         }
 
-        function mkDiv(writer, pwd, content) { //파라메터로 받음, div 태그에 감싸서 내용을 프린트하기 위해 만듬
-            let newDiv = document.createElement("div"); //div 요소 하나 생성 (영역을 하나 만들어 새로운 영역에 추가)
-            // <div id = "d_1" pwd = '111'>
-            //새 div 태그 생성
-            newDiv.id = "d_" + cnt++; //고유 id 할당. 생성한 div에 id를 지정. d_1, d_2의 형식. cnt 값을 붙여줌
-            newDiv.pwd = pwd; // 현재 이 글에 대한 비밀번호 추가. 각각의 비밀번호를 div에서 인식할 수 있도록.
-            let html = ""; //생성된 div에 출력될 내용을 작성한 변수
-            html += "" + writer + "<br/>";
-            html += "" + content + "<br/>";
-            html += "<input type = 'button' class='btn btn-warning' value = '수정'>";
-            html += "<input type = 'button' class='btn btn-danger' value = '삭제'>"; //html 위 4개를 아래 innerHTML에 넣어줌.
-            newDiv.innerHTML = html; //위의 html 내용을 전부 받아옴
-            return newDiv; //받아온 내용 return
+        /* 글<div> 생성 */
+        function makeDiv(writer, pwd, content) {
+            /*-- 1. <div id="d_1" pwd='1111'></div> */
+            let newDiv = document.createElement("div"); //새 <div> 태그 생성
+            newDiv.id = "d_" + cnt; // 생성한 div에 id 지정. d_1, d_2 ...
+            newDiv.pwd = pwd;   // 사용자가 입력한 pwd값을 파라메터로 받아 할당.
+
+            /*-- 2. <div>태그의 innerHTML 값 넣어주기 */
+            let html = "";
+            // 편하게 수정하기 위해 <span></span> 태그로 묶어줌 
+            html += "<span style='font-size: 1.3em' id='w_" + cnt + "'>" + writer + "</span><br/>";
+            html += "<span style='font-size: 1em' id='c_" + cnt + "'>" + content + "</span><br/>";
+            // onclick=함수명(___)에 스페이스 없으면 '' 안붙여도 됨.
+            html += "<input type='button' style='margin-right: 5px' class='btn btn-outline-warning mb-3' value='수정' onclick=editForm(" + cnt + ")>"; //editForm('글번호')
+            html += "<input type='button' class='btn btn-outline-danger mb-3' value='삭제' onclick=del(" + cnt + ")>";
+            newDiv.innerHTML = html;
+            //<div>writer content 수정버튼 삭제버튼</div>
+
+            cnt++;
+            return newDiv;
+        }
+
+        /* 1-1. 수정 폼 보여주기 (이전에 작성한 내용과 함께)*/
+        function editForm(cnt) {
+            let editDiv = document.getElementById("d_" + cnt); // 수정할 글의 div
+            let editForm = document.getElementById("editf"); // 수정폼 div 
+
+            // 수정할 글(부모요소)에 수정폼(자식요소)을 추가하기 (<body>에 숨어있던 수정폼을 잘라내서(Ctrl+X) 첨부)
+            editDiv.appendChild(editForm);
+
+            // <span></span> 사잇값을 변수에 담기 
+            let writer = document.getElementById("w_" + cnt).innerHTML;
+            let content = document.getElementById("c_" + cnt).innerHTML;
+
+            // 수정폼에 사잇값 담기 
+            document.getElementById("editwriter").value = writer;
+            document.getElementById("editcontent").value = content;
+
+            // 버튼에 cnt 속성을 추가해서 수정 글번호를 저장 
+            // <input type="button" value="수정완료" id="editbtn" cnt="1" onclick="edit()">
+            document.getElementById("editbtn").cnt = cnt;
+
+            editForm.style.display = ''; // 화면에 수정폼이 나타나게 하기 
+        }
+
+        /* 1-2. 수정 완료하기 */
+        function edit() {
+            let cnt = document.getElementById("editbtn").cnt;  // 수정할 글의 번호 
+            let editDiv = document.getElementById("d_" + cnt); // 수정할 글의 div
+            let pwd2 = document.getElementById("editpwd").value; // 수정폼에 입력한 글 비밀번호 
+
+            if (editDiv.pwd != pwd2) { // 원 글 비번과 수정폼 비번 비교 
+                alert("password가 일치하지 않습니다!")
+            } else {
+                let newWriter = document.getElementById("editwriter").value;
+                let newcontent = document.getElementById("editcontent").value;
+                // 폼에 작성한 내용을 글 div에 담기
+                // 입력양식에 입력한 값 = value
+                // <></> 태그 사이에 적힌 값 = innerHTML
+                document.getElementById("w_" + cnt).innerHTML = newWriter;
+                document.getElementById("c_" + cnt).innerHTML = newcontent;
+            }
+
+            // 입력폼 초기화 
+            document.getElementById("editwriter").value = "";
+            document.getElementById("editpwd").value = "";
+            document.getElementById("editcontent").value = "";
+
+            // 폼 사라지기 
+            cancel();
+        }
+
+        /* 1-3. 수정 취소하기 */
+        function cancel() {
+            let editForm = document.getElementById("editf"); // 수정폼div를 변수에 담기
+            editForm.style.display = 'none'; // 화면에 사라지게 하고 자리 뺌
+            // 수정글에 붙여놓은 수정폼을 다시 <body>로 돌려놓음 (원래 자리)
+            // <body> 태그는 하나밖에 없으니까 [0]. 
+            document.getElementsByTagName("body")[0].appendChild(editForm);
+        }
+
+        /* 2. 삭제 */
+        function del(cnt) {
+            // prompt(): alert에 입력받는 창이 뜸.
+            let pwd = prompt("password를 입력해 주세요.");
+            let delDiv = document.getElementById("d_" + cnt);
+            if (pwd == delDiv.pwd) {
+                // <div id = "list"> <delDiv> </div>
+                document.getElementById("list").removeChild(delDiv);
+            } else {
+                alert("password가 일치하지 않습니다!");
+            }
+
         }
     </script>
 
@@ -53,7 +138,7 @@
             <div class="column">
                 <div class="card">
                     <div class="img-container">
-                        <img src="profile-img-1.jpg" />
+                        <img src="./images/chang/profile-img-1.jpg" />
                     </div>
                     <h3>정효창</h3>
                     <P>이제부터 시작하는 캠프 저혼자 수료하겠다는 목표보다는 함께하는 동기들과 다같이 수료하겠다는 목표로 열심이 하겠습니다!</P>
@@ -71,8 +156,8 @@
                 <div class="card">
                     <h3>나의 MBTI 및 성격</h3>
                     <P>저의 MBTI는 ISFP입니다! 내향 적이긴하나 친해지면 내향적인면을 잘느끼지 못할정도로 활발해요!
-                        저는 남에게 피해를 끼치는 행동을 정말 싫어합니다. 남에게 피해가 가지않게 어떻게든 일을 제 선에서 해결하려고합니다. 
-                        그런과정에서 남에게 도움을 잘 구하려 하지않아 미련하다는 말도 자주들어요(물론 기한내에  정말 어떻게해도 안될때는 최소한의 도움을 받아요!!).
+                        저는 남에게 피해를 끼치는 행동을 정말 싫어합니다. 남에게 피해가 가지않게 어떻게든 일을 제 선에서 해결하려고합니다.
+                        그런과정에서 남에게 도움을 잘 구하려 하지않아 미련하다는 말도 자주들어요(물론 기한내에 정말 어떻게해도 안될때는 최소한의 도움을 받아요!!).
                     </P>
                 </div>
             </div>
@@ -87,48 +172,99 @@
             <div class="column">
                 <div class="card">
                     <h3>나의 협업 스타일</h3>
-                    <P>위 장점에서 소개했지만 저는 책임감이 강한편으로, 협업의 목표를 달성하기위해 최대한 협력하며 팀원들에게 신뢰를 갖고 좋은자료를 공유하며, 팀원의 기대를 넘어서기 위해 항상 노력합니다. 또한 어려운 상황에서도 문제를 해결하는 능력을 발휘하고자 합니다. </P>
+                    <P>위 장점에서 소개했지만 저는 책임감이 강한편으로, 협업의 목표를 달성하기위해 최대한 협력하며 팀원들에게 신뢰를 갖고 좋은자료를 공유하며, 팀원의 기대를 넘어서기 위해 항상
+                        노력합니다. 또한 어려운 상황에서도 문제를 해결하는 능력을 발휘하고자 합니다. </P>
                 </div>
             </div>
         </div>
         </div>
         </div>
         <hr>
-        <div class="guestbook">
-            <h3>방명록</h3>
-        </div>
-        <div class="guestbookbox">
-            <form name="f">
-                <table id="t1">
-                    <tr>
-                        <td><div class="form-floating mb-3">
-                            <input type="text" name="writer" class="form-control" id="writer" placeholder="작성자" style="font-size:20px">
-                            <label for="floatingInput">작성자</label></div></td>
-                    </tr>
-                    <tr>
-                        <td><div class="form-floating mb-3">
+
+        <!-- guest book -->
+        <h3>방명록 작성</h3>
+        <!-- 서버로 데이터를 전송하려면 form이 꼭 필요함. -->
+        <form name="f">
+            <table id="t1">
+                <tr>
+                    <td>
+                        <div class="form-floating mb-3">
+                            <input type="text" name="writer" class="form-control" id="writer" style="width:500px"
+                                placeholder="작성자">
+                            <label for="floatingInput">작성자</label>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="form-floating mb-3">
                             <input type="password" name="pwd" class="form-control" id="pwd" placeholder="Password">
                             <label for="floatingPassword">Password</label>
-                          </div></td>
-                    </tr>
-                    <tr>
-                        <td><div class="form-floating mb-3">
-                            <textarea class="form-control" name="content" placeholder="내용을 입력해 주세요." id="content" style="width:500px;height:100px;font-size:20px"></textarea>
-                            <label for="floatingTextarea2">내용을 입력해 주세요.</label>
-                          </div></td>
-                        
-                    </tr>
-                    <tr>
-                        <td><button id="button" type="button" class="btn btn-primary" name="작성" value="작성" onclick="a()">작성하기</button></td>
-                        
-                    </tr>
-                </table>
-            </form>
-        </div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="form-floating mb-3">
+                            <textarea type="text" name="content" class="form-control" placeholder="내용을 입력해 주세요."
+                                id="content" style="height: 100px"></textarea>
+                            <label for="내용을 입력해 주세요.">내용을 입력해 주세요.</label>
+                        </div>
+                    </td>
+                <tr>
+                    <th></th>
+                    <td><input class="btn btn-primary mb-3" type="button" value="작성하기" onclick="a()"></td>
+                </tr>
+            </table>
+        </form>
+        <h3>방명록</h3>
         <div id="list">
+            <!-- 새로 생길 요소의 자리를 미리 만들어놓음 -->
+            <!-- <div id="d_1">작성자:<span id="w_1">aaa</span><br/>내용:<span id="c_1">asdf</span><br/>수정 삭제</div> -->
+            <!-- <div id="d_2">작성자:<span id="w_2">bbb</span><br/>내용:<span id="c_2">qwer</span><br/>수정 삭제</div> -->
+            <!-- <div id="d_3">작성자:<span id="w_3">ccc</span><br/>내용:<span id="c_3">zxcv</span><br/>수정 삭제</div> -->
         </div>
-    </section>
 
+        <!-- 수정 폼 -->
+        <!-- none: 화면에 안보이게 하고 자리 할당 안함. <body>에 있긴 함. -->
+        <table id="editf" style="display: none;">
+            <tr>
+                <td>
+                    <div class="form-floating mb-3">
+                        <input type="text" name="editwriter" class="form-control" id="editwriter" style="width:500px"
+                            placeholder="작성자">
+                        <label for="floatingInput">작성자</label>
+                    </div>
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <div class="form-floating mb-3">
+                        <input type="password" name="editpwd" class="form-control" id="editpwd" placeholder="Password">
+                        <label for="floatingPassword">Password</label>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="form-floating mb-3">
+                        <textarea type="text" name="editcontent" class="form-control" placeholder="내용을 입력해 주세요."
+                            id="editcontent" style="height: 100px"></textarea>
+                        <label for="내용을 입력해 주세요.">내용을 입력해 주세요.</label>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <th></th>
+                <td><input class="btn btn-primary" type="button" value="수정완료" id="editbtn" onclick="edit()">
+                    <input class="btn btn-danger" type="button" value="취소" onclick="cancel()">
+                </td>
+            </tr>
+        </table>
+    </section>
+    <script type="module" src="./js/hyochang_firebase.js"></script>
+    <script type="module" src="./js/chang.js"></script>
 </body>
 
 </html>
