권경열 개인페이지 image 수정

--- a/yeol.html
+++ b/yeol.html
@@ -14,7 +14,7 @@
 
       <main class="contents-wrapper">
         <div class="main-header">
-          <img src="./images/yeol/profile04.png" alt="" />
+          <div class="profile-img"></div>
           <h1>권경열</h1>
           <p>
             안녕하세요? 저는 권경열이라고합니다. 프론트앤드로 직무 변경을 위해 내배캠을 신청하게 되었습니다.<br />
