index - 권경열, 강지향 멤버 카드 이미지 수정

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <!--권경열-->
             <div class="member-section__card">
               <a href="./yeol.html">
-                <img src="./images/yeol/profile04.png" alt="권경열" />
+                <div class="member-section__card-img"></div>
               </a>
               <div class="member-section__card__info">
                 <div>
@@ -88,7 +88,7 @@
             <!--최광희-->
             <div class="member-section__card">
               <a href="./choi.html">
-                <img src="./images/yeol/profile04.png" alt="권경열" />
+                <div class="member-section__card-img"></div>
               </a>
               <div class="member-section__card__info">
                 <div>
@@ -134,7 +134,7 @@
             <!--전지현-->
             <div class="member-section__card">
               <a href="./jihyun.html">
-                <img src="./images/yeol/profile04.png" alt="권경열" />
+                <div class="member-section__card-img"></div>
               </a>
               <div class="member-section__card__info">
                 <div>
@@ -193,7 +193,7 @@
             <!--강지향-->
             <div class="member-section__card">
               <a href="./kang.html">
-                <img src="./images/yeol/profile04.png" alt="권경열" />
+                <div class="member-section__card-img"></div>
               </a>
               <div class="member-section__card__info">
                 <div>
@@ -239,7 +239,7 @@
             <!--정효창-->
             <div class="member-section__card">
               <a href="./chang.html">
-                <img src="./images/yeol/profile04.png" alt="권경열" />
+                <div class="member-section__card-img"></div>
               </a>
               <div class="member-section__card__info">
                 <div>
