--- a/index.html
+++ b/index.html
@@ -311,8 +311,9 @@
       </main>
     </div>
 
+    <script type="module" src="./js/yeol_firebase.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="./js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
