강지향 js파일 리팩토링

--- a/kang.html
+++ b/kang.html
@@ -134,6 +134,6 @@
 
     <!-- js 파일 -->
     <script type="module" src="./js/kang_firebase.js"></script>
-    <script type="module" src="./js/kang_member_page.js"></script>
+    <script type="module" src="./js/kang.js"></script>
 </body>
 </html>
