reset.css a태그 밑줄 제거

--- a/kang.html
+++ b/kang.html
@@ -19,7 +19,7 @@
     <div class="wrap" id="wrap">
         <!-- 헤더 부분 -->
         <header id="header">
-            <h1 class="hd-team-name">일단 버티조</h1>
+            <a href=""><h1 class="hd-team-name">일단 버티조</h1></a>
             <div class="hd-member-img"></div>
             <h2 class="hd-member-name">강지향</h2>
             <p class="hd-member-text">
