홈버튼 추가

--- a/kang.html
+++ b/kang.html
@@ -19,7 +19,12 @@
     <div class="wrap" id="wrap">
         <!-- 헤더 부분 -->
         <header id="header">
-            <a href=""><h1 class="hd-team-name">일단 버티조</h1></a>
+            <a href="./index.html" class="home">
+                <h1 class="hd-team-name">
+                    <img src="/images/kang/home_icon-icons.com_73532.svg" alt="홈 이미지">
+                    일단버티조
+                </h1>
+            </a>
             <div class="hd-member-img"></div>
             <h2 class="hd-member-name">강지향</h2>
             <p class="hd-member-text">
