강지향 js, html 오타 수정

--- a/kang.html
+++ b/kang.html
@@ -75,7 +75,7 @@
                 <div class="itm-box">
                     <p>
                     저의 협업스타일은 최대한 상대방에 말들을 경청하고 수용하려 하며<br>
-                    우유부단해 보일순 보이지만 더 좋은의견을 제시해서 해결해 나가는 편입니다<br>
+                    우유부단해 보일순 있겠지만 더 좋은의견을 제시해서 해결해 나가는 편입니다<br>
                     피드백이 빠르게 이뤄지기 위해 소통을 빨리 하는편입니다<br>
                     </p>
                 </div>
