최광희 방명록 입력창 초기화 수정

--- a/choi.html
+++ b/choi.html
@@ -66,11 +66,9 @@
                 </tr>
             </table>
         </form>
-            <h3>방명록</h3>
+        <hr color="white" size="6px">
+            <h3></h3>
             <div id="list">
-                <!-- 새로 생길 요소의 자리를 미리 만들어놓음 -->                
-                <!-- <div id="d_2">작성자:<span id="w_2">bbb</span><br/>내용:<span id="c_2">qwer</span><br/>수정 삭제</div> -->
-                <!-- <div id="d_3">작성자:<span id="w_3">ccc</span><br/>내용:<span id="c_3">zxcv</span><br/>수정 삭제</div> -->
             </div>
         </div>
     </div>
