--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -288,7 +288,8 @@
         <!-- 좋아요 섹션 시작!-->
         <section class="member-section__likes">
           <div class="member-section__like-area">
-            <h1>좋아요 투표!</h1>
+            <img src="" alt="" />
+            <h2>함께 물 한잔하고 하고싶은 존버러를 선택해주세요.</h2>
             <!-- 멤버 카드 및 좋아요 버튼!-->
             <div class="member-section__like-card">
               <img src="./images/yeol/profile04.png" alt="" />
