Member Area Section Title

--- a/index.html
+++ b/index.html
@@ -288,8 +288,10 @@
         <!-- 좋아요 섹션 시작!-->
         <section class="member-section__likes">
           <div class="member-section__like-area">
-            <img src="" alt="" />
-            <h2>함께 물 한잔하고 하고싶은 존버러를 선택해주세요.</h2>
+            <div class="member-section__like-area__container">
+              <img class="member-section__like-area-image" src="./images/main/Welcome.png" alt="" />
+              <h2 class="member-section__like-area-title">함께 물 한잔하고 하고싶은 존버러를 선택해주세요.</h2>
+            </div>
             <!-- 멤버 카드 및 좋아요 버튼!-->
             <div class="member-section__like-card">
               <img src="./images/yeol/profile04.png" alt="" />
@@ -344,7 +346,6 @@
           </div>
 
           <div class="member-section__like-chart">
-            <h1>좋아요 통계!</h1>
             <canvas id="myChart"></canvas>
           </div>
         </section>
