--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <body>
     <div class="wrapper" id="wrapper">
       <header class="main-header">
-        <h1>일단 버티조</h1>
+        <div class="main-team-text"></div>
+        <div class="main-text"></div>
+        <div class="main-text-02"></div>
+        <div class="main-img"></div>
+        <!-- <img class="main-text" src="./images/main/mainText.svg" alt="">
+        <img class="main-team-text" src="./images/main/B-02.svg">
+        <img class="main-text-02" src="./images/main/maingText_02.svg">
+        <img class="main-img" src="./images/main/Design.png"> -->
         <!-- Slider main container -->
         <div class="swiper">
           <!-- Additional required wrapper -->
