--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
   <body>
     <div class="wrapper" id="wrapper">
       <header class="main-header">
-        <div class="main-team-text"></div>
-        <div class="main-text"></div>
-        <div class="main-text-02"></div>
-        <div class="main-img"></div>
-        <!-- <img class="main-text" src="./images/main/mainText.svg" alt="">
-        <img class="main-team-text" src="./images/main/B-02.svg">
-        <img class="main-text-02" src="./images/main/maingText_02.svg">
-        <img class="main-img" src="./images/main/Design.png"> -->
-        <!-- Slider main container -->
+          <div class="main-team-text"></div>
+          <div class="main-text"></div>
+          <div class="main-text-02"></div>
+          <div class="main-img"></div>
         <div class="swiper">
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- 슬라이드 이 부분 꾸미면됩니다! 끝-->
             <!-- 슬라이드 이 부분 꾸미면됩니다! 끝-->
-            <div class="swiper-slide">약속</div>
-            <div class="swiper-slide">목표</div>
+            <div class="swiper-slide">
+              약속
+            </div>
+            <div class="swiper-slide">
+              목표
+            </div>
             <!-- 슬라이드 이 부분 꾸미면됩니다! 끝-->
             <!-- 슬라이드 이 부분 꾸미면됩니다! 끝-->
           </div>
